<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/filename"
    />
    
    <EditText
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="TroubleIsaFriend.mp3"
    android:id="@+id/filename"
    />
    
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    	<Button
    	 android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/playbutton"
	     android:onClick="mediaplay"
	     android:id="@+id/playbutton"
	     />
		<Button
    	 android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/pausebutton"
	     android:onClick="mediaplay"
	     android:id="@+id/pausebutton"
	     />    
    	<Button
    	 android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/resetbutton"
	     android:onClick="mediaplay"
	     android:id="@+id/resetbutton"
	     />
		<Button
    	 android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/stopbutton"
	     android:onClick="mediaplay"
	     android:id="@+id/stopbutton"
	     />       
    </LinearLayout>
</LinearLayout>
